--- a/adapter.html
+++ b/adapter.html
@@ -7,7 +7,7 @@
  </head>
  <body> 
   <script type="text/javascript">
-    document.write ('test');
+    document.write ('test2');
   </script>
  </body>
 </html>
